# G1-Head-Control

./: .gitignore  .graphifyignore  CLAUDE.md  README.md
head_control/: CMakeLists.txt  README.md  package.xml
head_control/include/head_control/: head_control_node.hpp
head_control/src/: head_control_node.cpp
head_pico_bridge/: package.xml  setup.cfg  setup.py
head_pico_bridge/head_pico_bridge/: bridge_node.py  xrt_head_publisher.py
