<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>head_control</name>
  <version>0.0.0</version>
  <description>ROS2 package to control the 2-DOF head for G1</description>
  <maintainer email="kjyothiswaroop00@gmail.com">kjyothiswaroop</maintainer>
  <license>MIT</license>

  <depend> rclcpp </depend>
  <depend> dynamixel_sdk </depend>
  <depend> std_msgs </depend>
  <depend> sensor_msgs </depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
